--- a/SpanishAcademy/Views/Home/Index.cshtml
+++ b/SpanishAcademy/Views/Home/Index.cshtml
@@ -36,7 +36,7 @@
     </div>
 </nav>
 <header class="masthead text-center text-white d-flex">
-    <div class="container my-auto">
+    @*<div class="container my-auto">
         <div class="row" style="transform: translateY(30%);">
             <div class="col-lg-8 mx-auto div-fade text-yellow">
                 <h4 class="mb-4">Learn Spanish in Bangkok. <br /> เรียนภาษาสเปนกับครูสเปนในกรุงเทพ</h4>
@@ -47,11 +47,11 @@
                 </p>
             </div>
 
-            @*<div class="col-lg-8 mx-auto div-fade mt-3">
+            <div class="col-lg-8 mx-auto div-fade mt-3">
 
-                </div>*@
+                </div>
         </div>
-    </div>
+    </div>*@
 </header>
 
 @Html.Partial("pv_services")
