--- a/SpanishAcademy/Views/Home/pv_online.cshtml
+++ b/SpanishAcademy/Views/Home/pv_online.cshtml
@@ -46,7 +46,7 @@
                                 30 Skype
                             </p>
                             <p class="text-red small mb-3">
-                                10000 Baths
+                                700 Baths/hour or 20000 Baths/course
                             </p>
                         </div>
                     </div>
@@ -73,7 +73,7 @@
                                 36 Skype
                             </p>
                             <p class="text-red small mb-3">
-                                12000 Baths
+                                700 Baths/hour or 20000 Baths/course
                             </p>
                         </div>
                     </div>
@@ -100,7 +100,7 @@
                                 32 Skype
                             </p>
                             <p class="text-red small mb-3">
-                                12000 Baths
+                                700 Baths/hour or 20000 Baths/course
                             </p>
                         </div>
                     </div>
@@ -127,7 +127,7 @@
                                 36 Skype
                             </p>
                             <p class="text-red small mb-3">
-                                12000 Baths
+                                700 Baths/hour or 20000 Baths/course
                             </p>
                         </div>
                     </div>
@@ -154,7 +154,7 @@
                                 36 Skype
                             </p>
                             <p class="text-red small mb-3">
-                                12500 Baths
+                                700 Baths/hour or 20000 Baths/course
                             </p>
                         </div>
                     </div>
@@ -181,7 +181,7 @@
                                 36 Skype
                             </p>
                             <p class="text-red small mb-3">
-                                12500 Baths
+                                700 Baths/hour or 20000 Baths/course
                             </p>
                         </div>
                     </div>
