--- a/SpanishAcademy/Views/Home/pv_more.cshtml
+++ b/SpanishAcademy/Views/Home/pv_more.cshtml
@@ -10,7 +10,7 @@
     <div class="container">
         <div class="row no-gutters mb-3">
             <div class="col-lg-12">
-                <a class="portfolio-box" href="#">
+                <a class="portfolio-box" href="https://www.facebook.com/learnspanishBangkok/posts/874325019438413">
                     <img class="img-fluid" src="~/Content/img/Events/Events.jpg" alt="">
                     <div class="portfolio-box-caption">
                         <div class="portfolio-box-caption-content">
