--- a/SpanishAcademy/Views/Home/Index.cshtml
+++ b/SpanishAcademy/Views/Home/Index.cshtml
@@ -36,22 +36,27 @@
     </div>
 </nav>
 <header class="masthead text-center text-white d-flex">
-    @*<div class="container my-auto">
-        <div class="row" style="transform: translateY(30%);">
-            <div class="col-lg-8 mx-auto div-fade text-yellow">
+    <div class="container my-auto p-0">
+        <img style="width: 15vw;height: 15vw;float:right;transform: translateY(0%);" class="img-fluid" src="~/Content/img/thumbnail_espanol_text.png" alt="">
+        <img style="width: 15vw;height: 30vw;float:right;transform: translateY(0%);" class="img-fluid" src="~/Content/img/thumbnail_logo.png" alt="">
+        @*<div class="row" style="transform: translateY(-30%);">
+            
+            <div class="col-sm-1 mx-auto pb-3 div-fade text-yellow">
+                <img class="img-fluid" src="~/Content/img/thumbnail_logo.png" alt="">
+                <img class="img-fluid" src="~/Content/img/thumbnail_espanol_text.png" alt="">
                 <h4 class="mb-4">Learn Spanish in Bangkok. <br /> เรียนภาษาสเปนกับครูสเปนในกรุงเทพ</h4>
-                <hr class="light">
-                <p class="text-faded small mb-4">
-                    Academy del Español aims to be the center where participants can immerse themselves in the language and culture as part
-                    of the learning process.
-                </p>
+                    <hr class="light">
+                    <p class="text-faded small mb-4">
+                        Academy del Español aims to be the center where participants can immerse themselves in the language and culture as part
+                        of the learning process.
+                    </p>
             </div>
 
             <div class="col-lg-8 mx-auto div-fade mt-3">
 
                 </div>
-        </div>
-    </div>*@
+        </div>*@
+    </div>
 </header>
 
 @Html.Partial("pv_services")
