--- a/SpanishAcademy/Views/Home/pv_contact.cshtml
+++ b/SpanishAcademy/Views/Home/pv_contact.cshtml
@@ -28,7 +28,7 @@
                         <br />
                         <span class="text-red">Spanish/English</span>+66-40-940-923
                         <br />
-                        <span class="text-red">Thai/Chinese</span>+66-86-977-1070
+                        <span class="text-red">Thai/Chinese</span>+66-99-418-7368
                     </p>
                 </div>
                 <div class="col-md-4 text-center">
@@ -36,7 +36,7 @@
                         <br />
                         <i class="fa fa-envelope-o fa-3x mb-3 text-red"></i>
                         <br />
-                        <a href="mailto:Academaidelespanol@gmail.com">Academaidelespanol@gmail.com</a>
+                        <a href="mailto:Academaidelespanol@gmail.com">Academiadelespanol@gmail.com</a>
                         <br />
                         <a href="#here">Line-id :: Davidmg88</a>
                     </p>
