--- a/SpanishAcademy/Views/Home/pv_contact.cshtml
+++ b/SpanishAcademy/Views/Home/pv_contact.cshtml
@@ -26,9 +26,8 @@
                         <br />
                         <i class="fa fa-phone fa-3x mb-3 text-red"></i>
                         <br />
-                        <span class="text-red">Spanish/English</span>+66-40-940-923
+                        <span class="text-red">+66-99-418-7368</span>
                         <br />
-                        <span class="text-red">Thai/Chinese</span>+66-99-418-7368
                     </p>
                 </div>
                 <div class="col-md-4 text-center">
@@ -58,7 +57,6 @@
                         4th floor, Klongtoey<br />
                         Klongtoey, Bangkok<br />
                         10110 Thailand<br />
-                        Tax ID: 1 1009 0008 119<br />
                     </p>
                 </div>
                 <div class="col-md-4">
