--- a/SpanishAcademy/Views/Home/Index.cshtml
+++ b/SpanishAcademy/Views/Home/Index.cshtml
@@ -36,9 +36,12 @@
     </div>
 </nav>
 <header class="masthead text-center text-white d-flex">
+    <div class="col-12 my-auto p-0">
+        <img style="width: 15vw;height: 15vw;float:right; transform:translateX(-10%)" class="img-fluid" src="/Content/img/thumbnail_espanol_text.png" alt="">
+        <img style="width: 15vw;height: 30vw;float:right; transform:translateX(-10%)" class="img-fluid" src="/Content/img/thumbnail_logo.png" alt="">
+
+    </div>
     <div class="container my-auto p-0">
-        <img style="width: 15vw;height: 15vw;float:right;transform: translateY(0%);" class="img-fluid" src="~/Content/img/thumbnail_espanol_text.png" alt="">
-        <img style="width: 15vw;height: 30vw;float:right;transform: translateY(0%);" class="img-fluid" src="~/Content/img/thumbnail_logo.png" alt="">
         @*<div class="row" style="transform: translateY(-30%);">
             
             <div class="col-sm-1 mx-auto pb-3 div-fade text-yellow">
