--- a/SpanishAcademy/Views/Home/pv_contact.cshtml
+++ b/SpanishAcademy/Views/Home/pv_contact.cshtml
@@ -4,6 +4,7 @@
             <div class="col-lg-8 mx-auto text-center">
                 <h2 class="section-heading">Contact Us</h2>
                 <hr class="my-4">
+                <h5 class="mb-4">Please call us for arrange an appointment prior to arrival.</h5>
             </div>
         </div>
     </div>
@@ -18,13 +19,13 @@
         </div>
         <div class="container">
             <div class="row">
-                <div class="col-md-2">
+                <div class="col-md-1">
 
                 </div>
-                <div class="col-md-4 text-center">
+                <div class="col-md-3 text-center">
                     <p>
                         <br />
-                        <i class="fa fa-phone fa-3x mb-3 text-red"></i>
+                        <i class="fa fa-phone-square fa-3x mb-3 text-red"></i>
                         <br />
                         <span class="text-red">+66-99-418-7368</span>
                         <br />
@@ -33,33 +34,38 @@
                 <div class="col-md-4 text-center">
                     <p>
                         <br />
-                        <i class="fa fa-envelope-o fa-3x mb-3 text-red"></i>
+                        <i class="fa fa-envelope fa-3x mb-3 text-red"></i>
                         <br />
                         <a href="mailto:Academaidelespanol@gmail.com">Academiadelespanol@gmail.com</a>
                         <br />
-                        <a href="#here">Line-id :: Davidmg88</a>
                     </p>
                 </div>
-                <div class="col-md-2">
+                <div class="col-md-3 text-center">
+                    <p>
+                        <br />
+                        <i class="fa fa-comment-o fa-3x mb-3 text-red"></i>
+                        <br />
+                        <span class="text-red">Line-id :: Davidmg88</span>
+                        <br />
+                    </p>
+                </div>
+                <div class="col-md-1">
 
                 </div>
             </div>
             <div class="row">
-                <div class="col-md-4">
+                <div class="col-md-3">
 
                 </div>
-                <div class="col-md-4 text-center">
+                <div class="col-md-6 text-center">
                     <p>
-                        <span class="text-red">For taxable Invoices:</span>
                         <br />
-                        ESP language co.,Ltd<br />
-                        760/1-2 Sukhumvit road<br />
-                        4th floor, Klongtoey<br />
-                        Klongtoey, Bangkok<br />
-                        10110 Thailand<br />
+                        Bhiraj Tower at EmQuartier<br />
+                        651 Sukhumvit Rd, Khwaeng Khlong Tan Nuea,<br />
+                        Khet Watthana, Krung Thep Maha Nakhon 10110<br />
                     </p>
                 </div>
-                <div class="col-md-4">
+                <div class="col-md-3">
 
                 </div>
             </div>
