--- a/SpanishAcademy/Views/Home/pv_place.cshtml
+++ b/SpanishAcademy/Views/Home/pv_place.cshtml
@@ -10,33 +10,48 @@
             <div class="col-lg-12">
                 <a class="portfolio-box">
                     <img class="img-fluid" src="~/Content/img/Places/PlaceA.jpg" alt="">
-                    <br />
                 </a>
             </div>
         </div>
         <br />
-        <div class="row">
+        <div class="row m-3">
+            <div class="col-lg-8 mx-auto text-center">
+                <div class="google-maps">
+                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3875.7849673937153!2d100.56762461483028!3d13.731464690360628!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x8d5017500d5909ea!2sBhiraj+Tower+at+EmQuartier!5e0!3m2!1sen!2sus!4v1530080821570" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
+                </div>
+                <p class="m-3">
+                    Bhiraj Tower at EmQuartier
+                </p>
+                <a class="jumbotron-fluid mb-4" href="https://goo.gl/maps/EV1nLvVhuf72" rel="noopener noreferrer" target="_blank">
+                    <input type="button" class="btn btn-dark btn-lg" value="Open in other apps">
+                </a>
+                
+            </div>
+        </div>
+        <div class="row m-3">
             <div class="col-lg-8 mx-auto text-center">
                 <div class="google-maps">
                     <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3875.8905813853953!2d100.56202711440818!3d13.725073801611071!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x30e29f04d08a8f07%3A0x4938e65c54a1bd67!2sAguston+Sukhumvit+22!5e0!3m2!1sen!2sth!4v1522570187840" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
                 </div>
-                <br />
-                <a class="jumbotron-fluid" href="https://goo.gl/maps/uwokfvBa6K52" rel="noopener noreferrer" target="_blank">
-                    <button type="button" class="btn btn-dark btn-lg">Open in other apps</button>
+                <p class="m-3">
+                    Aguston 22 (Prompong bts station free shuttle bus to destination (3 mins)
+                </p>
+                <a class="jumbotron-fluid mb-4" href="https://goo.gl/maps/uwokfvBa6K52" rel="noopener noreferrer" target="_blank">
+                    <input type="button" class="btn btn-dark btn-lg" value="Open in other apps">
                 </a>
             </div>
         </div>
         <br />
-        <div class="row">
+        @*<div class="row">
             <div class="col-lg-8 mx-auto text-center">
                 <p class="mb-4">
-                    • Aguston 22 (Prompong bts station free shuttle bus to destination (3 mins)
+                    • Bhiraj Tower at EmQuartier
                     <br />
-                    • The Horizon ( Ekamai bts station ( 2 min's walk) -open in May 2018
+                    • Aguston 22 (Prompong bts station free shuttle bus to destination (3 mins)
                 </p>
                 <p class="mb-4">For Private class, it can be done at your place or appointed place outside the academy.</p>
             </div>
-        </div>
+        </div>*@
     </div>
     <div class="container-fluid p-1">
 
