--- a/SpanishAcademy/Views/Home/pv_contact.cshtml
+++ b/SpanishAcademy/Views/Home/pv_contact.cshtml
@@ -60,7 +60,7 @@
                 <div class="col-md-6 text-center">
                     <p>
                         <br />
-                        Bhiraj Tower at EmQuartier<br />
+                        Bhiraj Tower at Emquatier, level 30th, room 3038, Regus office<br />
                         651 Sukhumvit Rd, Khwaeng Khlong Tan Nuea,<br />
                         Khet Watthana, Krung Thep Maha Nakhon 10110<br />
                     </p>
