--- a/SpanishAcademy/Views/Home/pv_place.cshtml
+++ b/SpanishAcademy/Views/Home/pv_place.cshtml
@@ -20,7 +20,7 @@
                     <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3875.7849673937153!2d100.56762461483028!3d13.731464690360628!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x8d5017500d5909ea!2sBhiraj+Tower+at+EmQuartier!5e0!3m2!1sen!2sus!4v1530080821570" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
                 </div>
                 <p class="m-3">
-                    Bhiraj Tower at EmQuartier
+                    Bhiraj Tower at Emquatier, level 30th, room 3038, Regus office
                 </p>
                 <a class="jumbotron-fluid mb-4" href="https://goo.gl/maps/EV1nLvVhuf72" rel="noopener noreferrer" target="_blank">
                     <input type="button" class="btn btn-dark btn-lg" value="Open in other apps">
